Fixing layout issue with the header and adding popup-messages to indicate non-implemented functionalities.

--- a/fotofe/angular/assets/css/less/modules/misc.less
+++ b/fotofe/angular/assets/css/less/modules/misc.less
@@ -15,6 +15,7 @@
 	}
 	@media @layoutMedium {
 		float: left;
+		width: auto;
 		height: 60px;
 		padding-top: 15px;
 		padding-bottom: 15px;
