--- a/fotofe/angular/assets/css/less/modules/navigation.less
+++ b/fotofe/angular/assets/css/less/modules/navigation.less
@@ -21,7 +21,7 @@
 			margin: 0;
 			width: auto;
 			background-color: transparent;
-			transition: none;
+			.transform(none);
 		}
 	}
 	&.is-open ul {
